--- a/DMContentCreator/Resources/iPhone-DMContentCreator.storyboard
+++ b/DMContentCreator/Resources/iPhone-DMContentCreator.storyboard
@@ -281,6 +281,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-mU-S1C">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="el6-O9-g0a">
                                             <rect key="frame" x="20" y="20" width="50" height="50"/>
                                             <constraints>
@@ -319,6 +323,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Qcz-n0-WtI" secondAttribute="trailing" priority="992" constant="20" id="rih-M2-gZG"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="backgroundImage" destination="WpQ-mU-S1C" id="cFy-AY-tG4"/>
                                     <outlet property="pluginDetailsLabel" destination="dbt-qq-uFe" id="4tB-8k-rIf"/>
                                     <outlet property="pluginTitleLabel" destination="Qcz-n0-WtI" id="WaN-LK-cSf"/>
                                     <outlet property="thumbnailView" destination="el6-O9-g0a" id="Pwh-J0-OMc"/>
@@ -347,18 +352,32 @@
                         <sections>
                             <tableViewSection headerTitle="Image" id="xlp-og-OCg">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="240" id="JLY-om-hcn">
-                                        <rect key="frame" x="0.0" y="55" width="320" height="240"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="280" id="JLY-om-hcn">
+                                        <rect key="frame" x="0.0" y="55" width="320" height="280"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JLY-om-hcn" id="Hay-xt-D6E">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="279"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YTc-aG-sQZ">
-                                                    <rect key="frame" x="10" y="10" width="300" height="220"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YTc-aG-sQZ">
+                                                    <rect key="frame" x="10" y="10" width="300" height="221"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="220" id="xBk-F8-NcT"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Caption" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RWC-Vf-JPF">
+                                                    <rect key="frame" x="10" y="239" width="300" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="YTc-aG-sQZ" firstAttribute="top" secondItem="Hay-xt-D6E" secondAttribute="top" constant="10" id="6hc-Jw-yDe"/>
+                                                <constraint firstItem="YTc-aG-sQZ" firstAttribute="leading" secondItem="Hay-xt-D6E" secondAttribute="leading" constant="10" id="9M0-hp-JdR"/>
+                                                <constraint firstAttribute="trailing" secondItem="YTc-aG-sQZ" secondAttribute="trailing" constant="10" id="NDf-cN-dTx"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -371,6 +390,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="PLUG-4" id="mWJ-di-zWq"/>
                     <connections>
+                        <outlet property="captionTextField" destination="RWC-Vf-JPF" id="bGz-vj-PNL"/>
                         <outlet property="imageView" destination="YTc-aG-sQZ" id="TTq-5R-JdJ"/>
                     </connections>
                 </tableViewController>
@@ -407,18 +427,32 @@
                         <sections>
                             <tableViewSection headerTitle="width fixed image" id="s6d-rM-ngY">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="240" id="RNK-Fr-rN8">
-                                        <rect key="frame" x="0.0" y="55" width="320" height="240"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="280" id="a6Q-MA-fGn">
+                                        <rect key="frame" x="0.0" y="55" width="320" height="280"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RNK-Fr-rN8" id="cdM-UI-YiP">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a6Q-MA-fGn" id="foF-K6-MaX">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="279"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rSp-UZ-gX9">
-                                                    <rect key="frame" x="10" y="10" width="300" height="220"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2LF-YQ-Dcf">
+                                                    <rect key="frame" x="10" y="10" width="300" height="221"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="220" id="Gvg-jx-RhQ"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Caption" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVe-sv-bR6">
+                                                    <rect key="frame" x="10" y="239" width="300" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="2LF-YQ-Dcf" firstAttribute="top" secondItem="foF-K6-MaX" secondAttribute="top" constant="10" id="6Aj-la-XeI"/>
+                                                <constraint firstAttribute="trailing" secondItem="2LF-YQ-Dcf" secondAttribute="trailing" constant="10" id="6wr-nh-uql"/>
+                                                <constraint firstItem="2LF-YQ-Dcf" firstAttribute="leading" secondItem="foF-K6-MaX" secondAttribute="leading" constant="10" id="bh5-Om-ZUT"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -431,7 +465,8 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="PLUG-14" id="gaU-ez-eqV"/>
                     <connections>
-                        <outlet property="imageView" destination="rSp-UZ-gX9" id="4NC-dT-PQt"/>
+                        <outlet property="captionTextField" destination="cVe-sv-bR6" id="MQ1-8m-1MY"/>
+                        <outlet property="imageView" destination="2LF-YQ-Dcf" id="1PL-7E-ic8"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6YF-Dk-TyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -680,20 +715,24 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Currency" id="etN-Xe-xVY">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="xx8-Kh-Apm" style="IBUITableViewCellStyleDefault" id="3hk-zO-naI">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3hk-zO-naI">
                                         <rect key="frame" x="0.0" y="239" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3hk-zO-naI" id="spe-e6-d1E">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="T​HAI BAHT ( ฿ )" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xx8-Kh-Apm">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="viA-8c-kwX">
+                                                    <rect key="frame" x="20" y="8" width="280" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <segments>
+                                                        <segment title="THB"/>
+                                                        <segment title="USD"/>
+                                                    </segments>
+                                                    <connections>
+                                                        <action selector="whenCurrencyChange:" destination="mCY-hd-Vp8" eventType="valueChanged" id="B2b-ek-fCG"/>
+                                                    </connections>
+                                                </segmentedControl>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -707,14 +746,14 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="PLUG-6" id="Bkt-El-nUb"/>
                     <connections>
-                        <outlet property="currencyLabel" destination="xx8-Kh-Apm" id="s9I-Nh-cqO"/>
+                        <outlet property="currencySelector" destination="viA-8c-kwX" id="pxG-cn-DUv"/>
                         <outlet property="regularTextField" destination="Utg-Jv-59n" id="cbh-ur-5lQ"/>
                         <outlet property="saleTextField" destination="T5j-OL-3hU" id="eCH-Ik-5od"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FRf-uK-Wdp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3495" y="479"/>
+            <point key="canvasLocation" x="3495" y="-259"/>
         </scene>
         <!--Plugin Gallery Editor - PLUG-3-->
         <scene sceneID="HWh-Oh-V4d">
